--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,22 @@
 @import "tailwindcss";
+
+
+@theme {
+  --color-in-blue: #004569;
+
+
+
+  /* Gradients */
+  --color-in-cyan: #d6f5f1;
+  --color-in-white: #FFFFFF;
+  
+
+
+  /* Fuentes */
+  --font-in-nunito: 'Nunito', sans-serif;
+}
+
+
+body {
+  @apply font-in-nunito;
+}	
